# uvao_monitoring

./: .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  alembic.ini  architecture.md  docker-compose.prod.yml  docker-compose.yml  mockups.html  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_report_batch_id.py
app/: __init__.py  config.py  db.py  deps.py  main.py
app/models/: __init__.py  network.py  report.py  report_row.py  resource.py  user.py
app/routes/: admin.py  auth.py  reports.py
app/services/: excel_export.py  repost_finder.py  url_parser.py  vk_client.py
app/static/: styles.css
app/templates/: base.html  dashboard.html  login.html
app/templates/admin/: network_detail.html  networks.html  users.html
app/templates/reports/: batch_detail.html  detail.html  new.html
scripts/: import_resources_xlsx.py  seed.py
tests/: test_report_creation.py  test_report_export.py  test_url_parser.py
