[project]
name = "monitoring-uvao"
version = "0.1.0"
description = "Internal VK repost monitoring service for UVAO networks"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.2.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1",
    "itsdangerous>=2.2.0",
    "httpx>=0.27.0",
    "openpyxl>=3.1.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
